--- a/src/assets/scss/argon-dashboard/plugins/pro/_choices.scss
+++ b/src/assets/scss/argon-dashboard/plugins/pro/_choices.scss
@@ -371,7 +371,7 @@
 /*=====  End of Choices  ======*/
 
 
-///////////// Creative Tim Changes
+///////////// Role hubChanges
 
 .is-open .choices__inner{
   border-radius: $choices-border-radius;
