--- a/src/assets/scss/argon-dashboard/plugins/pro/_datatable-extend.scss
+++ b/src/assets/scss/argon-dashboard/plugins/pro/_datatable-extend.scss
@@ -3,7 +3,7 @@ Simple-DataTables
 Github: https://github.com/fiduswriter/Simple-DataTables
 */
 
-// Creative Tim Changes
+// Role hubChanges
 
 .dataTable-wrapper{
 	.dataTable-top{
