--- a/src/assets/scss/argon-dashboard/plugins/pro/_fullcalendar-extend.scss
+++ b/src/assets/scss/argon-dashboard/plugins/pro/_fullcalendar-extend.scss
@@ -4,7 +4,7 @@ Docs & License: https://fullcalendar.io/
 (c) 2020 Adam Shaw
 */
 
-// Creative Tim Changes
+// Role hubChanges
 
 .fc-theme-standard .fc-scrollgrid,
 .fc-scrollgrid {
